--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
           <div class="speaker-affiliation">Università degli Studi di Salerno</div>
         </div>
         <div class="speaker-card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/George_J._Pappas_-_portrait.jpg" alt="Photo of George J. Pappas">
+          <div class="speaker-name">George J. Pappas</div>
+          <div class="speaker-affiliation">University of Pennsylvania</div>
+        </div>
+        <div class="speaker-card">
           <img src="https://ws.engr.illinois.edu/directory/viewphoto.aspx?photo=16932&s=300" alt="Photo of Madhusudan Parthasarathy">
           <div class="speaker-name">Madhusudan Parthasarathy</div>
           <div class="speaker-affiliation">University of Illinois at Urbana-Champaign</div>
